[package]
name = "attr"
version = "0.1.0"
authors = ["Florian Gilcher <florian.gilcher@asquera.de>"]
license = "MIT"
license-file = "LICENSE"
description = "`attr` is a library to provide external access to a datastructure through a typed path object, using all type information known about the data structure at hand."
documentation = "https://docs.rs/attr"
repository = "https://github.com/skade/attr"
homepage = "https://github.com/skade/attr"
readme = "README.md"
keywords = ["data"]

[dev-dependencies]
serde_json = "0.8.1"
